2012-12-11  Kent Tamura  <tkent@chromium.org>

        INPUT_MULTIPLE_FIELDS_UI: Disable focus navigation by right/left keys in RTL locales
        https://bugs.webkit.org/show_bug.cgi?id=104644

        Reviewed by Hajime Morita.

        * fast/forms/date-multiple-fields/date-multiple-fields-keyboard-events-expected.txt:
        * fast/forms/date-multiple-fields/date-multiple-fields-keyboard-events.html:
        * fast/forms/datetimelocal-multiple-fields/datetimelocal-multiple-fields-keyboard-events-expected.txt:
        * fast/forms/datetimelocal-multiple-fields/datetimelocal-multiple-fields-keyboard-events.html:
        * fast/forms/month-multiple-fields/month-multiple-fields-keyboard-events-expected.txt:
        * fast/forms/month-multiple-fields/month-multiple-fields-keyboard-events.html:
        * fast/forms/time-multiple-fields/time-multiple-fields-keyboard-events-expected.txt:
        * fast/forms/time-multiple-fields/time-multiple-fields-keyboard-events.html:

2012-12-11  Pavel Podivilov  <podivilov@google.com>

        [Chromium] Unreviewed, remove "platform/blackberry [ WontFix ]" from test expectations
        to make lint happy.

        * platform/chromium/TestExpectations:

2012-12-11  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed GTK gardening.

        Unskip a few test, adding expectations that (should) reflect the actual failure of each test.
        Also remove the expectations for the Animation API test. Support for that feature, along with
        the test, was removed just recently.

        * platform/gtk/TestExpectations:

2012-12-11  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed GTK gardening

        Adding failure expectations for tests that regressed in r137198 and in r137159-r137161 range.
        Removing failure expectations for the SVG viewspec tests that now pass.

        * platform/gtk/TestExpectations:

2012-12-11  Mike West  <mkwst@chromium.org>
